# simulinkBitalino

./: CMakeLists.txt  README.md  compile.bat  install.bat  simulinkBitalino.cpp  simulinkBitalino.slx  simulinkBitalino_dev.slx  simulinkBitalino_lib.slx  simulinkBitalino_mycode.cpp  simulinkBitalino_test.slx  simulinkBitalino_wrapper.cpp  slblocks.m  testBitalino.cpp
